Add optional time range for `air-quality/:latitude/:longitude`
* User can optionally give a time range to get multiple results `air-quality/:latitude/:longitude`.
* If time range is not given, from is set to current time - 24 hour, to
  is set to current time by default.
