# backend/docs/swagger.json
@@ -8,7 +8,7 @@
     "paths": {
         "/api/air-quality/{latitude}/{longitude}": {
             "get": {
-                "description": "Gets air quality value for given location",
+                "description": "Gets air quality value for given location. Optional time range can be given",
                 "produces": [
                     "application/json"
                 ],
@@ -30,6 +30,18 @@
                         "name": "longitude",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Starting time",
+                        "name": "from",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "End time",
+                        "name": "to",
+                        "in": "query"
                     }
                 ],
                 "responses": {
